--- a/ChangeLog
+++ b/ChangeLog
@@ -1,8 +1,35 @@
+2025-11-19 Luca Sartore <drwolf85@gmail.com>
+    * The HRTnomaly package VERSION 25.11.19 has been created
+    * Added `inline` to several functions in `src/cellwise.c`
+    * Updated matrix initializations in `R/cellwise.R`
+    * Updated matrix initializations in `R/bayeswise.R`
+
+2025-11-18 Luca Sartore <drwolf85@gmail.com>
+    * The HRTnomaly package VERSION 25.11.18 has been created
+    * Debugged the `mat_val_grad`, and `init_param` functions in `src/cellwise.c`
+    * Updated the example code in the file "man/class_check.Rd"
+    * Update all files in `src/` to avoid double-freeing memory.
+
+2025-11-17 Luca Sartore <drwolf85@gmail.com>
+    * The HRTnomaly package VERSION 25.11.17 has been created
+    * Debugged the `cmp_dbl`, `median_wna`, `init_param`, `mat_val_grad`,
+    `lion`, and `relat_check` functions in `src/cellwise.c`
+
+2025-09-09 Luca Sartore <drwolf85@gmail.com>
+    * The HRTnomaly package VERSION 25.9.9 has been created
+    * Included "R/pif.R" for R code implementing proximity isolation forests
+    * Included "src/pif.c" for C code implementing proximity isolation forests
+    * Included "man/pif.Rd" for documenting proximity isolation forests
+
+2025-06-04 Luca Sartore <drwolf85@gmail.com>
+    * The HRTnomaly package VERSION 25.6.4 has been created
+    * Included "awesome" badge in `README.md`
+
 2025-02-25 Luca Sartore <drwolf85@gmail.com>
     * The HRTnomaly package VERSION 25.2.25 has been created
     * Udpate version numbers in `DESCRIPTION` and `inst/INSTALL.md` files
     * Debugged the `median`, `group_normalize`, and `group_tail` functions in `src/fuzzyHRT.c` to fix clang undefined behaviour
-    * Udpate markdown code for images in  `READMD.md`
+    * Udpate markdown code for images in  `README.md`
     * Modified precompiler code around the `bayeswise` function in `src/cellwise.c` to fix standalone C tests
     * Fixed example code in `man/bayesHRT.Rd`
     * Fixed example code in `man/bootHRT.Rd`
